[package]
name = "automagical"
version = "0.1.0"
authors = ["aspin"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
shred = "0.10.2"

[features]
default = []
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

[profile.dev]
debug = 0

[build]
rustflags = ["-C link-arg=-fuse-ld=lld"]
